# graphics-assignments

assignment 0/: main.cpp
assignment 4/: README.txt
assignment 4/data/: scene10_testsphere.txt  scene11_chicken.txt
assignment 4/src/: Camera.h  Group.h  Material.h  Object3D.h  Renderer.cpp  Renderer.h  Sphere.h  Transform.h  Triangle.h  main.cpp
assignment 5/: README.txt
assignment 5/data/: scene11_chicken.txt
assignment 5/inst/: a4
assignment 5/scripts/: test_cases.sh
assignment 5/src/: CMakeLists.txt  Camera.h  Group.h  Noise.cpp  Plane.h  Renderer.cpp  Renderer.h  Sphere.h  Transform.h
final project/: CMakeLists.txt  README.txt  README2.txt
final project/inst/: final
final project/sample_solution/: a5soln  a5soln_mac
final project/src/: CMakeLists.txt  Camera.h  ContinuousTransform.h  Group.h  Light.h  Object3D.h  Plane.h  Renderer.cpp  SceneParser.cpp  SceneParser.h  Sphere.h
final project/vecmath/include/: Matrix4f.h
final project/vecmath/src/: Matrix4f.cpp
